--- a/get_started.csolution.yml
+++ b/get_started.csolution.yml
@@ -1,4 +1,8 @@
+# yaml-language-server: $schema=https://raw.githubusercontent.com/Open-CMSIS-Pack/devtools/schemas/projmgr/2.0.0-dev1/tools/projmgr/schemas/csolution.schema.json
+
 solution:
+  created-for: cmsis-toolbox@2.0.0
+  description: Simple get started example.
 
   compiler: GCC                               # toolchain used for this solution
 
