--- a/vcpkg-configuration.json
+++ b/vcpkg-configuration.json
@@ -1,9 +1,4 @@
 {
-  "default-registry": {
-    "kind": "git",
-    "baseline": "032d9d0820db290ce9ff644dabfdf564343013ae",
-    "repository": "https://github.com/microsoft/vcpkg"
-  },
   "registries": [
     {
       "kind": "artifact",
@@ -12,14 +7,14 @@
     },
     {
       "kind": "artifact",
-      "location": "https://aka.ms/vcpkg-artifacts-arm",
+      "location": "https://artifacts.keil.arm.com/vcpkg-ce-registry/registry.zip",
       "name": "arm"
     }
   ],
   "requires": {
+    "arm:tools/open-cmsis-pack/cmsis-toolbox": "^2.0.0-0",
+    "arm:compilers/arm/arm-none-eabi-gcc": "^12.2.1-0",
     "microsoft:tools/kitware/cmake": "^3.25.2",
-    "microsoft:tools/ninja-build/ninja": "^1.10.2",
-    "arm:compilers/arm/arm-none-eabi-gcc": "^12.2.1-mpacbti",
-    "arm:tools/open-cmsis-pack/ctools": "^1.5.0"
+    "microsoft:tools/ninja-build/ninja": "^1.10.2"
   }
 }
