--- a/vcpkg-configuration.json
+++ b/vcpkg-configuration.json
@@ -7,14 +7,14 @@
     },
     {
       "kind": "artifact",
-      "location": "https://artifacts.keil.arm.com/vcpkg-ce-registry/registry.zip",
+      "location": "https://artifacts.tools.arm.com/vcpkg-ce-registry/registry.zip",
       "name": "arm"
     }
   ],
   "requires": {
-    "arm:tools/open-cmsis-pack/cmsis-toolbox": "^2.0.0-0",
-    "arm:compilers/arm/arm-none-eabi-gcc": "^12.2.1-0",
     "microsoft:tools/kitware/cmake": "^3.25.2",
-    "microsoft:tools/ninja-build/ninja": "^1.10.2"
+    "microsoft:tools/ninja-build/ninja": "^1.10.2",
+    "arm:tools/open-cmsis-pack/cmsis-toolbox": "^2.0.0-0",
+    "arm:compilers/arm/arm-none-eabi-gcc": "^12.2.1-0"
   }
 }
