--- a/vcpkg-configuration.json
+++ b/vcpkg-configuration.json
@@ -2,18 +2,13 @@
   "registries": [
     {
       "kind": "artifact",
-      "location": "https://aka.ms/vcpkg-ce-default",
-      "name": "microsoft"
-    },
-    {
-      "kind": "artifact",
       "location": "https://artifacts.tools.arm.com/vcpkg-ce-registry/registry.zip",
       "name": "arm"
     }
   ],
   "requires": {
-    "microsoft:tools/kitware/cmake": "^3.31.5",
-    "microsoft:tools/ninja-build/ninja": "^1.12.0",
+    "arm:tools/kitware/cmake": "^3.31.5",
+    "arm:tools/ninja-build/ninja": "^1.12.0",
     "arm:tools/open-cmsis-pack/cmsis-toolbox": "^2.0.0-0",
     "arm:compilers/arm/arm-none-eabi-gcc": "^12.2.1-0"
   }
